--- a/pruebas.html
+++ b/pruebas.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://mdbootstrap.com/">
   </head>
-  <body>
+  <body
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <nav class="navbar" style="background-color: #3d515f;">
             <!-- Navbar content -->
@@ -41,7 +41,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+    </nav>
 
     
     <table class="table table-hover container " >
