--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="nav"></div>
     <div>
       <div id="app" class="row"></div>
+      <div id="cart"></div>
     </div>
     <div id="footer"></div>
     <script src="data/products.js"></script>
