cambios a api dom

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <body>
     <div id="nav"></div>
     <div>
-      <div id="app" class="row"></div>
-      <div id="cart"></div>
+      <div id="product-grid" class="row"></div>
+      <div id="product-detail"></div>
+      <div id="product-cart"></div>
     </div>
     <div id="footer"></div>
     <script src="data/products.js"></script>
