--- a/index.html
+++ b/index.html
@@ -8,19 +8,34 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
     />
+
     <title>Tienda</title>
   </head>
   <body>
     <div id="nav"></div>
-    <div>
+    <div class="my-5 mx-auto container">
       <div id="product-grid" class="row"></div>
       <div id="product-detail"></div>
-      <div id="product-cart"></div>
-      <div id="cart"></div>
+      <div id="product-cart">
+        <div class="d-flex justify-content-between w-100 my-4">
+          <h1>Carrito de compra</h1>
+          <button
+            class="btn btn-outline-primary"
+            onclick="showStoreComponent('product-grid')"
+          >
+            Seguir comprando
+          </button>
+        </div>
+      </div>
     </div>
     <div id="footer"></div>
     <script src="data/products.js"></script>
-    <script src="js/layout.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/layout.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
