--- a/carritocompra.html
+++ b/carritocompra.html
@@ -13,7 +13,7 @@
             <!-- Navbar content -->
           </nav>
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Tienda</a>
+          <a class="navbar-brand" href="#"><img src="logo.jpg" alt="" height="50px" width="50px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -258,7 +258,9 @@
       
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2023 Cachureando
+          © 2023 Cachureando <div class="container"> <img src="logo.jpg" alt="" height="50px" width="50px">
+
+          </div>
           <a class="text-dark" href="https://mdbootstrap.com/"</a>
         </div>
         <!-- Copyright -->
