funcion para eliminar items del carrito ok!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="nav"></div>
     <div class="my-5 mx-auto container">
-      <div id="product-grid" class="row"></div>
+      <div id="product-grid"></div>
       <div id="product-detail"></div>
       <div id="product-cart"></div>
     </div>
