--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="my-5 mx-auto container">
       <div id="product-grid"></div>
       <div id="product-detail"></div>
-      <div id="product-cart"></div>
+      <div>
+        <div id="product-cart"></div>
+        <div id="product-cart-totals"></div>
+      </div>
     </div>
     <div id="footer"></div>
     <script src="data/products.js"></script>
