mostrar/ocultar totals

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="product-detail"></div>
       <div>
         <div id="product-cart"></div>
-        <div id="product-cart-totals"></div>
+        <div id="product-totals"></div>
       </div>
     </div>
     <div id="footer"></div>
