--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div>
         <div id="product-cart"></div>
         <div id="product-totals"></div>
+        <button id="exampleModal"></button>
       </div>
     </div>
     <div id="footer"></div>
