--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <div id="product-totals"></div>
       </div>
     </div>
+    <div id="form" ></div>
+    
     <div id="footer"></div>
     <script src="data/products.js"></script>
     <script src="js/app.js"></script>
