--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+
     />
 
+    <script src="https://kit.fontawesome.com/67e9732091.js" crossorigin="anonymous"></script>
     <title>Tienda</title>
   </head>
   <body>
+    <i class="fa-solid fa-trash-can"></i>
     <div id="nav"></div>
     <div class="my-5 mx-auto container">
       <div id="product-grid"></div>
@@ -29,6 +32,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
+      src="https://kit.fontawesome.com/67e9732091.js" crossorigin="anonymous"
     ></script>
   </body>
 </html>
