--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div>
         <div id="product-cart"></div>
         <div id="product-totals"></div>
-        <button id="exampleModal"></button>
       </div>
+      <div id="btn-modal" class= "d-grid gap-2 d-md-flex justify-content-md-end"></div>
     </div>
     <div id="footer"></div>
     <script src="data/products.js"></script>
