--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-
     />
 
-    <script src="https://kit.fontawesome.com/67e9732091.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/67e9732091.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Tienda</title>
   </head>
   <body>
-    <i class="fa-solid fa-trash-can"></i>
     <div id="nav"></div>
     <div class="my-5 mx-auto container">
       <div id="product-grid"></div>
@@ -22,6 +23,10 @@
       <div>
         <div id="product-cart"></div>
         <div id="product-totals"></div>
+        <div
+          id="btn-modal"
+          class="d-grid gap-2 d-md-flex justify-content-md-end"
+        ></div>
       </div>
     </div>
     <div id="footer"></div>
@@ -32,7 +37,8 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
-      src="https://kit.fontawesome.com/67e9732091.js" crossorigin="anonymous"
+      src="https://kit.fontawesome.com/67e9732091.js"
+      crossorigin="anonymous"
     ></script>
   </body>
 </html>
