--- a/index.html
+++ b/index.html
@@ -13,26 +13,42 @@
       src="https://kit.fontawesome.com/67e9732091.js"
       crossorigin="anonymous"
     ></script>
-    <title>Tienda</title>
+    <title>Tienda Cachureando</title>
   </head>
   <body>
     <div id="nav"></div>
-    <div class="my-5 mx-auto container">
-      <div id="product-grid"></div>
-      <div id="product-detail"></div>
+    <div id="template-container">
+      <!-- ===== Componentes ===== -->
+      <!-- Grilla de productos -->
+      <section id="product-grid"></section>
+      <!-- Detalle de productos -->
+      <section id="product-detail"></section>
       <div>
-        <div id="product-cart"></div>
-        <div id="product-totals"></div>
-        <div
-          id="btn-modal"
-          class="d-grid gap-2 d-md-flex justify-content-md-end"
-        ></div>
+        <!-- Carrito de compra -->
+        <section>
+          <div id="product-cart-title"></div>
+          <div id="product-cart"></div>
+          <div id="product-cart-msg"></div>
+          <div id="product-totals"></div>
+          <div id="btn-modal"></div>
+        </section>
       </div>
     </div>
     <div id="footer"></div>
+
+    <!-- Data -->
     <script src="data/products.js"></script>
+
+    <!-- Variables y funciones globales -->
     <script src="js/app.js"></script>
-    <script src="js/layout.js"></script>
+
+    <!-- JS Componentes -->
+    <script src="js/components/product-grid.js"></script>
+    <script src="js/components/product-detail.js"></script>
+    <script src="js/components/product-cart.js"></script>
+    <script src="js/components/layout.js"></script>
+
+    <!-- CDNs -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
