--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <div id="btn-modal"></div>
         </section>
       </div>
+      <div id="invoice"></div>
     </div>
     <div id="footer"></div>
 
@@ -47,7 +48,7 @@
     <script src="js/components/product-detail.js"></script>
     <script src="js/components/product-cart.js"></script>
     <script src="js/components/layout.js"></script>
-
+    <script src="js/components/invoice.js"></script>
     <!-- CDNs -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
