--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
       <section id="product-detail"></section>
       <div>
         <!-- Carrito de compra -->
-        <section>
-          <div id="product-cart-title"></div>
-          <div id="product-cart"></div>
-          <div id="product-cart-msg"></div>
-          <div id="product-totals"></div>
-          <div id="btn-modal"></div>
-        </section>
+        <section id="product-cart"></section>
       </div>
+      <!-- Boleta-->
       <div id="invoice"></div>
     </div>
     <div id="footer"></div>
@@ -47,8 +42,10 @@
     <script src="js/components/product-grid.js"></script>
     <script src="js/components/product-detail.js"></script>
     <script src="js/components/product-cart.js"></script>
-    <script src="js/components/layout.js"></script>
+    <script src="js/components/product-shipping.js"></script>
     <script src="js/components/invoice.js"></script>
+    <script src="js/components/layout.js"></script>
+
     <!-- CDNs -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
