--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     <!-- Data -->
     <script src="data/products.js"></script>
 
-    <!-- Variables y funciones globales -->
+    <!-- funciones globales -->
     <script src="js/app.js"></script>
+    <script src="js/utils/send-mail.js"></script>
 
     <!-- JS Componentes -->
     <script src="js/components/product-grid.js"></script>
@@ -53,6 +54,10 @@
       crossorigin="anonymous"
       src="https://kit.fontawesome.com/67e9732091.js"
       crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js"
     ></script>
   </body>
 </html>
